Small change to the project structure...

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Comida Page</title>
-</head>
-<body>
-    Hola, somos el corillo de Codetrotters!
-</body>
-</html>
+<!DOCTYPE html>
+<html>
+    <head>
+	<title>Main</title>
+	<link rel="stylesheet" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" crossorigin="anonymous" />
+    </head>
+    <body>
+	Hola, somos el corillo de Codetrotters!
+	CMORENO WUZ HERE!!
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="css/comida.css"></script>
+    </body>
+</html>
