Quitarle margin al body

--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Comida Page</title>
-    <link rel="stylesheet" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" crossorigin="anonymous" />
-    <style type="text/css">
-    	body { 
-		  background: url(https://images.pexels.com/photos/54455/cook-food-kitchen-eat-54455.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260) no-repeat center center fixed; 
-		  background-size: cover;
-			}
-    </style>
-</head>
-<body>
-    Hola, somos el corillo de Codetrotters!
-    CMORENO WUZ HERE!!
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-</body>
+    <head>
+	   <title>Comida Page</title>
+	   <link rel="stylesheet" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" crossorigin="anonymous" />
+       <style type="text/css">
+        body {
+          background: url(https://images.pexels.com/photos/54455/cook-food-kitchen-eat-54455.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260) no-repeat center center fixed;
+          background-size: cover;
+          margin: 0;
+        }
+        h1 {
+            color: red;
+        }
+       </style>
+    </head>
+    <body>
+	Hola, somos el corillo de Codetrotters!
+	CMORENO WUZ HERE!!
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    </body>
 </html>
