--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head>
-	   <title>Comida Page 23445</title>
-	   <link rel="stylesheet" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" crossorigin="anonymous" />
-       <style type="text/css">
-        body {
-          background: url(https://images.pexels.com/photos/54455/cook-food-kitchen-eat-54455.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260) no-repeat center center fixed;
-          background-size: cover;
-          margin: 0;
-        }
-        h1 {
-            color: red;
-        }
-       </style>
+    <head>
+        <title>Comida Page 23445</title>
+        <link rel="stylesheet" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" crossorigin="anonymous" />
+        <style type="text/css">
+            body {
+                background: url(https://images.pexels.com/photos/54455/cook-food-kitchen-eat-54455.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260) no-repeat center center fixed;
+                background-size: cover;
+                margin: 0;
+            }
+            a {
+                display: block;
+                text-align: center;
+                color: white;
+                font-size: 3em;
+                text-decoration: none;
+                font-family: Helvetica;
+                margin-top: 60px;
+            }
+        </style>
     </head>
-    <body>
-	Hola, somos el corillo de Codetrotters!
-  <p> Syria que se cuide que Donny tiene hambre</p>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    </body>
+<body>
+    <a href="aboutus.html">About Us</a>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+</body>
 </html>
