--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,8 @@
     <title>About Us</title>
 </head>
 <body>
-    <h1>Code Trotters Food Service</h1>
+    <h1>Bryan Collazo</h1>
+    <h1>Mario Rodriguez</h1>
     <h2> Somos un grupo de Chef's reconocidos por hacer arroz con habichuelas, mezclado con aguacate y atún </h2>
 </body>
 </html>
