--- a/aboutus.html
+++ b/aboutus.html
@@ -11,6 +11,7 @@
     <h2>Bryan Collazo</h2>
     <h2>Mario Rodriguez</h2>
     <h2>Jeniffer Rivera</h2>
+    <h2>Onix Ortiz</h2>
 
 </body>
 </html>
