about us background

--- a/aboutus.html
+++ b/aboutus.html
@@ -2,6 +2,13 @@
 <html>
 <head>
     <title>About Us</title>
+    <style type="text/css">
+	    body {
+	                background: url(https://images.pexels.com/photos/326278/pexels-photo-326278.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260) no-repeat center center fixed;
+	                background-size: cover;
+	                margin: 0;
+	            }
+     </style>
 </head>
 <body>
 	<h1>Code Trotters Food Service</h1>
