--- a/aboutus.html
+++ b/aboutus.html
@@ -19,6 +19,7 @@
     <h2>Mario Rodriguez</h2>
     <h2>Jeniffer Rivera</h2>
     <h2>Onix Ortiz</h2>
+    <h2>Jorge Rodriguez</h2>
 
 </body>
 </html>
