--- a/aboutus.html
+++ b/aboutus.html
@@ -13,6 +13,7 @@
 <body>
 	<h1>Code Trotters Food Service</h1>
     <h2> Somos un grupo de Chef's reconocidos por hacer arroz con habichuelas, mezclado con aguacate y atún </h2>
+    <h2>Les recomendamos que pruebes a nuestro famoso pizza de mariscos</h2>
 
     <h1>Code Chefs</h1>
     <h2>Bryan Collazo</h2>
@@ -20,6 +21,7 @@
     <h2>Jeniffer Rivera</h2>
     <h2>Onix Ortiz</h2>
     <h2>Jorge Rodriguez</h2>
+    <h2>Carlos Moreno</h2>
 
 </body>
 </html>
